--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,20 @@
 /.classpath
 /.project
 /target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
