--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<surefire.argLine></surefire.argLine>
 
 		<!-- external package versions -->
-		<easymock-version>2.3</easymock-version>
+		<easymock-version>3.4</easymock-version>
 		<h2-version>1.2.128</h2-version>
 		<junit-version>4.8.1</junit-version>
 		<mysql-connector-java-version>5.1.18</mysql-connector-java-version>
@@ -27,8 +27,8 @@
 		<jtds-version>1.2.4</jtds-version>
 		<joda-time-version>1.5</joda-time-version>
 		<!-- needed for spring example -->
-		<spring-version>3.1.4.RELEASE</spring-version>
-		<commons-logging-version>1.1</commons-logging-version>
+		<spring-version>4.3.20.RELEASE</spring-version>
+		<commons-logging-version>1.1.1</commons-logging-version>
 		<ormlite-version>5.1-SNAPSHOT</ormlite-version>
 		<cglib-version>3.1</cglib-version>
 	</properties>
@@ -105,6 +105,14 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-eclipse-plugin</artifactId>
 				<version>2.4</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.1</version>
+				<configuration>
+					<useSystemClassLoader>false</useSystemClassLoader>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -204,6 +212,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
 		<!-- test dependencies -->
 		<dependency>
 			<groupId>junit</groupId>
