--- a/pom.xml
+++ b/pom.xml
@@ -29,14 +29,14 @@
 		<!-- needed for spring example -->
 		<spring-version>4.3.20.RELEASE</spring-version>
 		<commons-logging-version>1.1.1</commons-logging-version>
-		<ormlite-version>5.1-SNAPSHOT</ormlite-version>
+		<ormlite-version>5.2-SNAPSHOT</ormlite-version>
 		<cglib-version>3.1</cglib-version>
 	</properties>
 	<licenses>
 		<license>
 			<name>ISC License</name>
-			<url>http://ormlite.com/docs/license</url>
 			<distribution>repo</distribution>
+			<url>https://opensource.org/licenses/ISC</url>
 		</license>
 	</licenses>
 	<build>
